@startuml

title __ENGINE's Class Diagram__\n

  namespace com.apetrei.engine {
    class com.apetrei.engine.ConfigHandler {
        {static} - UPDATE_CAP : double
        {static} - height : int
        {static} - scale : float
        {static} - title : String
        {static} - width : int
        {static} + getHeight()
        {static} + getScale()
        {static} + getTitle()
        {static} + getUpdateCap()
        {static} + getWidth()
    }
  }
  

  namespace com.apetrei.engine {
    class com.apetrei.engine.GameContainer {
        - running : boolean
        - thread : Thread
        + GameContainer()
        + getInput()
        + getObjectManager()
        + getPhysicsSystem()
        + getRenderer()
        + getWindow()
        + run()
        + start()
        + stop()
        - dispose()
    }
  }
  

  namespace com.apetrei.engine {
    class com.apetrei.engine.GameObject {
        + active : boolean
        # components : ArrayList<Component>
        - uniqueTag : String
        + GameObject()
        + addComponent()
        + getComponent()
        + getGameContainer()
        + isActive()
        + render()
        + update()
    }
  }
  

  namespace com.apetrei.engine {
    class com.apetrei.engine.Input {
        - NUM_KEYS : int
        - NUM_MOUSE_KEYS : int
        - keys : boolean[]
        - keysPast : boolean[]
        - mouseKeys : boolean[]
        - mouseKeysPast : boolean[]
        - mouseX : int
        - mouseY : int
        - scroll : int
        + Input()
        + getMouseX()
        + getMouseY()
        + getScroll()
        + isKeyDown()
        + isKeyPressed()
        + isKeyUp()
        + isMouseKeyDown()
        + isMouseKeyPressed()
        + isMouseKeyUp()
        + keyPressed()
        + keyReleased()
        + keyTyped()
        + mouseClicked()
        + mouseDragged()
        + mouseEntered()
        + mouseExited()
        + mouseMoved()
        + mousePressed()
        + mouseReleased()
        + mouseWheelMoved()
        + update()
    }
  }
  

  namespace com.apetrei.engine {
    class com.apetrei.engine.ObjectManager {
        # gameObjects : ArrayList<GameObject>
        + addGameObject()
        + renderObjects()
        + updateObjects()
        ~ ObjectManager()
    }
  }
  

  namespace com.apetrei.engine {
    class com.apetrei.engine.Window {
        - bufferStrategy : BufferStrategy
        - canvas : Canvas
        - frame : JFrame
        - graphics : Graphics
        + UpdateWindow()
        + Window()
        + getCanvas()
        + getFrame()
        + getGraphics()
    }
  }
  

  com.apetrei.engine.GameContainer .up.|> java.lang.Runnable
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.Input : input
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.ObjectManager : objectManager
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.physics.PhysicsSystem2D : physicsSystem
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.renderer.Renderer : renderer
  com.apetrei.engine.GameContainer o-- com.apetrei.engine.Window : window
  com.apetrei.engine.GameObject o-- com.apetrei.engine.GameContainer : gameContainer
  com.apetrei.engine.Input .up.|> java.awt.event.KeyListener
  com.apetrei.engine.Input .up.|> java.awt.event.MouseListener
  com.apetrei.engine.Input .up.|> java.awt.event.MouseMotionListener
  com.apetrei.engine.Input .up.|> java.awt.event.MouseWheelListener
  com.apetrei.engine.Input o-- com.apetrei.engine.GameContainer : gameContainer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
